--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=IMS_Backend
 spring.docker.compose.enabled=false
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/name
-#spring.datasource.username=
-#spring.datasource.password=
-#
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:sqlserver://localhost\MSSQLSERVER:1433;database=inventory_db
+spring.datasource.username=sa
+spring.datasource.password=WatSee@87
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
