Updated dependencies. And change entity style of coding my manually apply encapsulation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=IMS_Backend
 spring.docker.compose.enabled=false
 
-spring.datasource.url=jdbc:sqlserver://localhost\MSSQLSERVER:1433;database=inventory_db
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inventory_db;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=WatSee@87
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
